<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:gravity="center_vertical|left"
    android:background="@drawable/search_box"
    android:layout_marginTop="8dip"
    android:id="@+id/ll_box">
    	<ImageView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:src="@drawable/search_icon"
    	    android:layout_marginLeft="5dip"
    	    ></ImageView>
    	
    	<EditText
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/zh_num_search_tip"
    	    android:layout_marginLeft="5dip"
    	    android:id="@+id/et_name"
    	    android:background="@null"
    	    ></EditText>
    </LinearLayout>
    
	 <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dip"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	    >
<!--     	第一行 -->
	     <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	       <LinearLayout
	        android:id="@+id/ly_num_gov"
		    android:layout_width="88dip"
	    	android:layout_height="88dip"
	    	android:background="@anim/layout_shap"
		    >
		      <TextView
		          android:layout_width="match_parent"
		          android:layout_height="match_parent"
		          android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:background="@drawable/menu_item_selector"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_gov" />

		 	</LinearLayout>
	        <LinearLayout
	             android:id="@+id/ly_num_hos"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:background="@drawable/menu_item_selector"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_hos"
		          />
		 	</LinearLayout>
	       <LinearLayout
	            android:id="@+id/ly_num_help"
			   	android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:background="@drawable/menu_item_selector"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_help"
		          />
		 	</LinearLayout>
	       <LinearLayout
	            android:id="@+id/ly_num_societyhelp"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:background="@drawable/menu_item_selector"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_societyhelp"
		          />
		 	</LinearLayout>
	 	</LinearLayout>
	 	
<!-- 	     第二行 -->
  	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	       <LinearLayout
		        android:id="@+id/ly_num_libry"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView
		          android:layout_width="match_parent"
		          android:layout_height="match_parent"
		          android:layout_gravity="center"
		          android:background="@drawable/menu_item_selector"
	    		  android:gravity="center"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_libry" />

		 	</LinearLayout>
	        <LinearLayout
	            android:id="@+id/ly_num_museum"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
		    	>
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
		    	  android:background="@drawable/menu_item_selector"
	    		  android:gravity="center"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_museum"
		          />
		 	</LinearLayout>
	       <LinearLayout
	            android:id="@+id/ly_num_traffic"
			   	android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
		    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
		    	  android:background="@drawable/menu_item_selector"
	    		  android:gravity="center"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_traffic"
		          />
		 	</LinearLayout>
	       <LinearLayout
	            android:id="@+id/ly_num_bank"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
		    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
		    	  android:background="@drawable/menu_item_selector"
	    		  android:gravity="center"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_bank"
		          />
		 	</LinearLayout>
	 	</LinearLayout>
	 </LinearLayout>
	 
<!-- 	 第二个layout -->
	 <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dip"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	    >
<!--     	第一行 -->
	     <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    >
	       <LinearLayout
	           android:id="@+id/ly_num_logistics"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView
		          android:layout_width="match_parent"
		          android:layout_height="match_parent"
		          android:layout_gravity="center"
		          android:background="@drawable/menu_item_selector"
	    		  android:gravity="center"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_logistics" />

		 	</LinearLayout>
	        <LinearLayout
	            android:id="@+id/ly_num_car"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:background="@drawable/menu_item_selector"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_car"
		          />
		 	</LinearLayout>
	       <LinearLayout
	            android:id="@+id/ly_num_repair"
			   	android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
		   	 >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:background="@drawable/menu_item_selector"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_repair"
		          />
		 	</LinearLayout>
	       <LinearLayout
	            android:id="@+id/ly_num_familyhelp"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
		    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:background="@drawable/menu_item_selector"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_familyhelp"
		          />
		 	</LinearLayout>
	 	</LinearLayout>
	 	
<!-- 	     第二行 -->
  	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	       <LinearLayout
	            android:id="@+id/ly_num_move"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView
		          android:layout_width="match_parent"
		          android:layout_height="match_parent"
		          android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:background="@drawable/menu_item_selector"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_move" />

		 	</LinearLayout>
	        <LinearLayout
	            android:id="@+id/ly_num_takeout"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:background="@drawable/menu_item_selector"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_takeout"
		          />
		 	</LinearLayout>
	       <LinearLayout
	            android:id="@+id/ly_num_traffic1"
			   	android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_traffic1"
		          />
		 	</LinearLayout>
	       <LinearLayout
	            android:id="@+id/ly_num_life"
			    android:layout_width="88dip"
		    	android:layout_height="88dip"
		    	android:background="@anim/layout_shap"
			    >
		      <TextView 
		          android:layout_width="match_parent"
		    	  android:layout_height="match_parent"
		    	  android:layout_gravity="center"
	    		  android:gravity="center"
	    		  android:textSize="@dimen/text_tile_size"
		          android:text="@string/zh_num_life"
		          />
		 	</LinearLayout>
	 	</LinearLayout>
	 </LinearLayout>
</LinearLayout>
